k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: udemy-python-app
  namespace: udemy-python-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - udemy-python-app-test.devops-master.shop
      secretName: udemy-python-app-tls
  rules:
    - host: udemy-python-app-test.devops-master.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: udemy-python-app
                port:
                  number: 5000
